--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a class="top-logo logo" href="index.html">Web<span>Studio</span></a>
             <ul class="menu-list">
                 <li><a href="index.html">Студия</a></li>
-                <li><a href="#" rel="noopener noreferrer">Портфолио</a></li>
+                <li><a href="portfolio.html" rel="noopener noreferrer">Портфолио</a></li>
                 <li><a href="#">Контакты</a></li>
             </ul>
         </nav>
