--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <title>Портфолио</title>
 </head>
 <body>
@@ -34,47 +36,47 @@
             </ul>
             <ul class="project-list">
                 <li>
-                    <img src="./images/portfolio/portfolio-1.jpg" alt="Веб-сайт технокряк">
+                    <img src="./images/portfolio/portfolio-1.jpg" alt="Веб-сайт технокряк" width="370">
                     <h2>Технокряк</h2>
                     <p>Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio/portfolio-2.jpg" alt="Постер New Orlean vs Golden Star">
+                    <img src="./images/portfolio/portfolio-2.jpg" alt="Постер New Orlean vs Golden Star" width="370">
                     <h2>Постер New Orlean vs Golden Star</h2>
                     <p>Дизайн</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio/portfolio-3.jpg" alt="Ресторан Seafood">
+                    <img src="./images/portfolio/portfolio-3.jpg" alt="Ресторан Seafood" width="370">
                     <h2>Ресторан Seafood</h2>
                     <p>Приложение</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio/portfolio-4.jpg" alt="Проект Prime">
+                    <img src="./images/portfolio/portfolio-4.jpg" alt="Проект Prime" width="370">
                     <h2>Проект Prime</h2>
                     <p>Маркетинг</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio/portfolio-5.jpg" alt="Проект Boxes">
+                    <img src="./images/portfolio/portfolio-5.jpg" alt="Проект Boxes" width="370">
                     <h2>Проект Boxes</h2>
                     <p>Приложение</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio/portfolio-6.jpg" alt="Веб-сайт Inspiration has no Borders">
+                    <img src="./images/portfolio/portfolio-6.jpg" alt="Веб-сайт Inspiration has no Borders" width="370">
                     <h2>Inspiration has no Borders</h2>
                     <p>Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio/portfolio-7.jpg" alt="Издание Limited Edition">
+                    <img src="./images/portfolio/portfolio-7.jpg" alt="Издание Limited Edition" width="370">
                     <h2>Издание Limited Edition</h2>
                     <p>Дизайн</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio/portfolio-8.jpg" alt="Проект LAB">
+                    <img src="./images/portfolio/portfolio-8.jpg" alt="Проект LAB width="370"">
                     <h2>Проект LAB</h2>
                     <p>Маркетинг</p>
                 </li>
                 <li>
-                    <img src="./images/portfolio/portfolio-9.jpg" alt="Growing Business">
+                    <img src="./images/portfolio/portfolio-9.jpg" alt="Growing Business" width="370">
                     <h2>Growing Business</h2>
                     <p>Приложение</p>
                 </li>
@@ -82,13 +84,13 @@
         </section>
     </main>
     <footer>
-        <div>
+        <div class="footer">
             <a class="bottom-logo logo" href="index.html">Web<span>Studio</span></a>
             <address class="footer-address">
                 <ul class="address-list">
-                    <li><a href="#">г. Киев, пр-т Леси Украинки, 26</a></li>
-                    <li><a href="mailto:info@example.com">info@example.com</a></li>
-                    <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+                    <li><a href="#" class="map">г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li><a href="mailto:info@example.com" class="footer-contacts">info@example.com</a></li>
+                    <li><a href="tel:+380991111111" class="footer-contacts">+38 099 111 11 11</a></li>
                 </ul>
             </address>
         </div>
